--- a/public/404.html
+++ b/public/404.html
@@ -4,16 +4,20 @@
   <title>The page you were looking for doesn't exist (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  body {
+  html,body {
     background-color: #EFEFEF;
     color: #2E2F30;
     text-align: center;
     font-family: arial, sans-serif;
     margin: 0;
+    height: 100%;
+    width: 100%;
   }
 
   .error_pic{
     background-image: url("/error.jpg");
+    width: 100%;
+    height: 1000px;
   }
   </style>
 </head>
