--- a/public/404.html
+++ b/public/404.html
@@ -18,6 +18,18 @@
     background-image: url("/error.jpg");
     width: 100%;
     height: 1000px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 85px;
+    line-height: 150%;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   </style>
 </head>
@@ -25,6 +37,7 @@
 <body>
   <!-- This file lives in public/404.html -->
   <div class="error_pic">
+    <a href="/">Return to home</a>
   </div>
 </body>
 </html>
