--- a/public/404.html
+++ b/public/404.html
@@ -18,18 +18,18 @@
     background-image: url("/error.jpg");
     width: 100%;
     height: 1000px;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
     background-size: cover;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  a{
+    margin-top: 250px;
     font-family: 'Ubuntu', sans-serif;
     font-size: 85px;
     line-height: 150%;
     color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
   }
   </style>
 </head>
