--- a/public/404.html
+++ b/public/404.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Ubuntu:medium" rel="stylesheet">
+
   <title>The page you were looking for doesn't exist (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
@@ -25,10 +27,9 @@
     align-items: center;
   }
   a{
-    margin-top: 250px;
+    margin-top: 750px;
     font-family: 'Ubuntu', sans-serif;
-    font-size: 85px;
-    line-height: 150%;
+    font-size: 105px;
     color: white;
   }
   </style>
